[gd_scene load_steps=5 format=3 uid="uid://cpbpuypite66o"]

[ext_resource type="Script" path="res://ui/waiting_dialog.gd" id="1_bhbv1"]
[ext_resource type="FontFile" uid="uid://ql2ikqy6aebg" path="res://assets/fonts/LondrinaSolid-Regular.ttf" id="1_tgb1g"]

[sub_resource type="LabelSettings" id="LabelSettings_o6ymy"]
font = ExtResource("1_tgb1g")
font_size = 48
font_color = Color(1, 0.85098, 0.533333, 1)
shadow_color = Color(0, 0, 0, 0.25)
shadow_offset = Vector2(0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_apx3s"]
font = ExtResource("1_tgb1g")
font_size = 40

[node name="WaitingDialog" type="ColorRect"]
anchors_preset = -1
anchor_top = 0.25
anchor_right = 1.0
anchor_bottom = 0.75
grow_horizontal = 2
grow_vertical = 2
color = Color(0.179688, 0.179688, 0.179688, 1)
script = ExtResource("1_bhbv1")

[node name="Center" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Center"]
layout_mode = 2
theme_override_constants/separation = 32
alignment = 1

[node name="Label" type="Label" parent="Center/VBoxContainer"]
layout_mode = 2
text = "Waiting for Opponent "
label_settings = SubResource("LabelSettings_o6ymy")
horizontal_alignment = 1

[node name="TimeLeft" type="Label" parent="Center/VBoxContainer"]
layout_mode = 2
text = "60
"
label_settings = SubResource("LabelSettings_apx3s")
horizontal_alignment = 1

[node name="WaitTimer" type="Timer" parent="."]

[connection signal="timeout" from="WaitTimer" to="." method="_on_wait_timer_timeout"]
